[package]
name = "daemon_forge"
version = "0.1.0"
edition = "2026"
authors = ["Nicolás Núñez <nicon@duck.com>"] 
description = "A robust, cross-platform library for daemonizing Rust applications."
license = "MIT"
repository = "https://github.com/ninunez14/daemon_forge" 
readme = "README.md"
keywords = ["daemon", "service", "background", "process", "windows"]
categories = ["os", "os::windows-apis", "os::unix-apis"]

[dependencies]
signal-hook = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
sd-notify = "0.4.5"
